Estilos de la informacion de la cancion añadidos

--- a/index.html
+++ b/index.html
@@ -94,39 +94,53 @@
                 </div>
             </nav>
         </div>
-        
+
         <!--Footer:  controles -->
         <div class="div-footer">
-            <footer data-testid="controles">
+            <footer>
                 <div class="div-footer1">
                     <!--div 1: Información de la cancion -->
                     <div class="detalles-cancion">
-                        <div class="mini-caratula">
-                            <a href="">
-                                <div class="icon">
-                                    <img class="img-minicaratula"
-                                        src="https://i.scdn.co/image/ab67616d000048512fb855430bbc5abe85e04e31" alt="">
+                        <div class="contenedor-detalle">
+                            <div class="mini-caratula">
+                                <a href="" class="">
+                                    <div class="icon">
+                                        <div class="contenedor-icon">
+                                            <img class="img-minicaratula"
+                                                src="https://i.scdn.co/image/ab67616d000048512fb855430bbc5abe85e04e31"
+                                                alt="">
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="info-cancion">
+                                <div class="titulo">
+                                    <div class="contenedor-titulo">
+                                        <div class="contenedor2">
+                                            <div class="contenedor3">
+                                                <span>
+                                                    <a href="" class="tit" style="border: none">Nombre de la canción</a>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </a>
-                            <button class="btn-minicaratula" aria-label="Plegar" aria-expanded="fal">
-                                <span class="material-icons md-16">keyboard_arrow_down</span>
+                                <div class="artista">
+                                    <div class="contenedor-titulo">
+                                        <div class="contenedor2">
+                                            <div class="contenedor3">
+                                                <span >
+                                                    <a href="" class="subtit">Artista</a>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="btn_like">
+                                <span class="material-icons md-16">favorite_border</span>
                             </button>
                         </div>
-                        <div>
-                            <div>
-                                <span>
-                                    <a href="">Nombre de la canción</a>
-                                </span>
-                            </div>
-                            <div>
-                                <span>
-                                    <a href="">Artista</a>
-                                </span>
-                            </div>
-                        </div>
-                        <button>
-                            <span class="material-icons md-16">favorite_border</span>
-                        </button>
                     </div>
                     <!--div 1: Controles de reproducción -->
                     <div>
