--- a/index.html
+++ b/index.html
@@ -15,26 +15,31 @@
         <div class="contenido">
             <!--Estructura de la barra superior -->
             <div class="barra-superior">
-                <header class="Menu_superior">
-                    <div class="btn-navegacion">
-                        <button class="btn_nav"><span
-                                class="material-icons md-16 md-light">arrow_back_ios</span></button>
-                        <button class="btn_nav"><span
-                                class="material-icons md-16 md-light">arrow_forward_ios</span></button>
-                    </div>
-                    <div class="norte-espacio1"></div>
-                    <div class="norte-espacio2"></div>
-                    <button class="btn_premium" title="Mejora tu cuenta" aria-label="Mejora tu cuenta"> Mejora tu
-                        cuenta</button>
-                    <button class="btn_usuario">
-                        <div class="user">
-                            <span class="material-icons md-16">person</span>
+                <div class="posicion">
+                    <header class="Menu_superior">
+                        <div class="div1">
                         </div>
+                        <div class="btn-navegacion">
+                            <button class="btn-nav"><span
+                                    class="material-icons md-16 md-light">arrow_back_ios</span></button>
+                            <button class="btn-nav"><span
+                                    class="material-icons md-16 md-light">arrow_forward_ios</span></button>
+                        </div>
+                        <div class="norte-espacio1"></div>
+                        <div class="norte-espacio2"></div>
+                        <button class="btn_premium" title="Mejora tu cuenta" aria-label="Mejora tu cuenta"> Mejora tu
+                            cuenta</button>
+                        <button class="btn_usuario">
+                            <div class="user">
+                                <span class="material-icons md-16">person_outline</span>
+                            </div>
+                            <div class="spn">Usuario</div>
 
-                        Usuario
-                        <span class="material-icons md-16 triangulo">play_arrow</span>
-                    </button>
-                </header>
+                            <span class="material-icons md-15 triangulo">play_arrow</span>
+                        </button>
+                    </header>
+                </div>
+
             </div>
             <!--Estructura del Menu izquierdo-->
             <nav class="menu">
@@ -93,117 +98,122 @@
                     </div>
                 </div>
             </nav>
-        </div>
 
-        <!--Footer:  controles -->
-        <div class="div-footer">
-            <footer>
-                <div class="div-footer1">
-                    <!--div 1: Información de la cancion -->
-                    <div class="detalles-cancion">
-                        <div class="contenedor-detalle">
-                            <div class="mini-caratula">
-                                <a href="" class="">
-                                    <div class="icon">
-                                        <div class="contenedor-icon">
-                                            <img class="img-minicaratula"
-                                                src="https://i.scdn.co/image/ab67616d000048512fb855430bbc5abe85e04e31"
-                                                alt="">
+            <!--Footer:  controles -->
+            <div class="div-footer">
+                <footer>
+                    <div class="div-footer1">
+                        <!--div 1: Información de la cancion -->
+                        <div class="detalles-cancion">
+                            <div class="contenedor-detalle">
+                                <div class="mini-caratula">
+                                    <a href="" class="">
+                                        <div class="icon">
+                                            <div class="contenedor-icon">
+                                                <img class="img-minicaratula"
+                                                    src="https://i.scdn.co/image/ab67616d000048512fb855430bbc5abe85e04e31"
+                                                    alt="">
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="info-cancion">
+                                    <div class="titulo">
+                                        <div class="contenedor-titulo">
+                                            <div class="contenedor2">
+                                                <div class="contenedor3">
+                                                    <span>
+                                                        <a href="" class="tit" style="border: none">Nombre de la
+                                                            canción</a>
+                                                    </span>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
-                                </a>
-                            </div>
-                            <div class="info-cancion">
-                                <div class="titulo">
-                                    <div class="contenedor-titulo">
-                                        <div class="contenedor2">
-                                            <div class="contenedor3">
-                                                <span>
-                                                    <a href="" class="tit" style="border: none">Nombre de la canción</a>
-                                                </span>
+                                    <div class="artista">
+                                        <div class="contenedor-titulo">
+                                            <div class="contenedor2">
+                                                <div class="contenedor3">
+                                                    <span>
+                                                        <a href="" class="subtit">Artista</a>
+                                                    </span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="artista">
-                                    <div class="contenedor-titulo">
-                                        <div class="contenedor2">
-                                            <div class="contenedor3">
-                                                <span>
-                                                    <a href="" class="subtit">Artista</a>
-                                                </span>
-                                            </div>
-                                        </div>
+                                <button class="btn_like">
+                                    <span class="material-icons md-16">favorite_border</span>
+                                </button>
+                            </div>
+                        </div>
+                        <!--div 1: Controles de reproducción -->
+                        <div class="control">
+                            <div class="division-control">
+                                <div class="contenedor-controles">
+                                    <div class="izquierda">
+                                        <button class="btn-control">
+                                            <span class="material-icons md-20">shuffle</span>
+                                        </button>
+                                        <button class="btn-control">
+                                            <span class="material-icons md-28">skip_previous</span>
+                                        </button>
+                                    </div>
+                                    <button class="btn_pause">
+                                        <span class="material-icons md-20">pause</span>
+                                    </button>
+                                    <div class="derecha">
+                                        <button class="btn-control">
+                                            <span class="material-icons md-28">skip_next</span>
+                                        </button>
+                                        <button class="btn-control">
+                                            <span class="material-icons md-20">repeat</span>
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="barra-play">
+                                    <div class="reproduciendo">00:00</div>
+                                    <div class="barra-avance"></div>
+                                    <div class="avance">3:00</div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--div 1: volumen y otras opciones -->
+                        <div class="brn-secundarios">
+                            <div class="contenedor-btn">
+                                <button class="btn-sec">
+                                    <span class="material-icons outlined md-16">auto_fix_normal</span>
+                                </button>
+                                <button class="btn-sec">
+                                    <span class="material-icons md-16">horizontal_split</span>
+                                </button>
+                                <button class="btn-sec">
+                                    <span class="material-icons md-16">speaker</span>
+                                </button>
+                                <div class="barra-volumen">
+                                    <button class="btn-volumen">
+                                        <span class="material-icons md-16">volume_up</span>
+                                    </button>
+                                    <div class="barra-vol">
+                                        <input type="range" min="0" max="1" step="0.1" class="slider">
                                     </div>
                                 </div>
                             </div>
-                            <button class="btn_like">
-                                <span class="material-icons md-16">favorite_border</span>
-                            </button>
                         </div>
                     </div>
-                    <!--div 1: Controles de reproducción -->
-                    <div class="control">
-                        <div class="division-control">
-                            <div class="contenedor-controles">
-                                <div class="izquierda">
-                                    <button class="btn-control">
-                                        <span class="material-icons md-20">shuffle</span>
-                                    </button>
-                                    <button class="btn-control">
-                                        <span class="material-icons md-28">skip_previous</span>
-                                    </button>
-                                </div>
-                                <button class="btn_pause">
-                                    <span class="material-icons md-20">pause</span>
-                                </button>
-                                <div class="derecha">
-                                    <button class="btn-control">
-                                        <span class="material-icons md-28">skip_next</span>
-                                    </button>
-                                    <button class="btn-control">
-                                        <span class="material-icons md-20">repeat</span>
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="barra-play">
-                                <div class="reproduciendo">00:00</div>
-                                <div class="barra-avance"></div>
-                                <div class="avance">3:00</div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--div 1: volumen y otras opciones -->
-                    <div class="brn-secundarios">
-                        <div class="contenedor-btn">
-                            <button class="btn-sec">
-                                <span class="material-icons outlined md-16">auto_fix_normal</span>
-                            </button>
-                            <button class="btn-sec">
-                                <span class="material-icons md-16">horizontal_split</span>
-                            </button>
-                            <button class="btn-sec">
-                                <span class="material-icons md-16">speaker</span>
-                            </button>
-                            <div class="barra-volumen">
-                                <button class="btn-volumen">
-                                    <span class="material-icons md-16">volume_up</span>
-                                </button>
-                                <div class="barra-vol">
-                                    <input type="range" min="0" max="1" step="0.1" class="slider">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
+                </footer>
+            </div>
+            <!--Area Principal -->
+            <div class="principal">
+                <div>
+                    <h1>Area principal</h1>
                 </div>
 
-            </footer>
+            </div>
+
         </div>
-        <!--Area Principal -->
-        <div class="principal">
-            <h1>Area principal</h1>
-        </div>
-    </div>
+
     </div>
 </body>
 
