correcciones de tamaño de la ventana

--- a/index.html
+++ b/index.html
@@ -57,45 +57,49 @@
                         <li><a class="elemento-li o" href=""><span class="material-icons md-24">book</span>Tu
                                 biblioteca</a></li>
                     </ul>
-                    <div class="contendor-playlist">
-                        <div class="contendor-playlist1">
-                            <div>
-                                <button class="btn-nuevalista">
-                                    <div class="icono-add">
-                                        <div class="icono-add1">
-                                            <span class="material-icons md-12">add</span>
-                                        </div>
-                                    </div> Crear playlist
-                                </button>
-                            </div>
-                            <div>
-                                <button class="btn-nuevalista">
-                                    <div class="icono-add">
-                                        <div class="icono-add1 color-icono md-light">
-                                            <span class="material-icons md-12">favorite</span>
-                                        </div>
-                                    </div>Tus me gusta
-                                </button>
-                            </div>
-                            <div class="division">
-                                <hr class="separador">
-                            </div>
-                            <div class="div-listas">
-                                <div class="div-listas1">
-                                    <ul>
-                                        <li class="lli">
-                                            <a class="lista1" href="">Mi playlist 1</a>
-                                            <div class="btn-vol">
-                                                <button class="btn-v">
-                                                    <span class="material-icons md-12">volume_up</span>
-                                                </button>
+                    <div class="cont">
+                        <div class="contendor-playlist">
+                            <div class="contendor-playlist1">
+                                <div>
+                                    <button class="btn-nuevalista">
+                                        <div class="icono-add">
+                                            <div class="icono-add1">
+                                                <span class="material-icons md-12">add</span>
                                             </div>
-                                        </li>
-                                    </ul>
+                                        </div> Crear playlist
+                                    </button>
+                                </div>
+                                <div>
+                                    <button class="btn-nuevalista">
+                                        <div class="icono-add">
+                                            <div class="icono-add1 color-icono md-light">
+                                                <span class="material-icons md-12">favorite</span>
+                                            </div>
+                                        </div>Tus me gusta
+                                    </button>
+                                </div>
+                                <div class="division">
+                                    <hr class="separador">
+                                </div>
+                                <div class="div-listas">
+                                    <div class="div-listas1">
+                                        <ul>
+                                            <li class="lli">
+                                                <a class="lista1" href="">Mi playlist 1</a>
+                                                <div class="btn-vol">
+                                                    <button class="btn-v">
+                                                        <span class="material-icons md-12">volume_up</span>
+                                                    </button>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                        <div class="espa" ></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
             </nav>
 
@@ -205,15 +209,10 @@
                 </footer>
             </div>
             <!--Area Principal -->
-            <div class="principal">
-                <div>
-                    <h1>Area principal</h1>
-                </div>
-
+            <div class="principal" id="principal">
+                <iframe src="/home.html" height="100%"></iframe>
             </div>
-
         </div>
-
     </div>
 </body>
 
