--- a/home.html
+++ b/home.html
@@ -11,169 +11,167 @@
 </head>
 
 <body>
-    <div class="principal">
-        <section class="contenido">
-            <div class="estructura">
-                <section class="buenos-dias">
-                    <div class="saludo">
-                        <h2 class="subtitulo">Buenos dias</h2>
-                    </div>
-                    <div class="relevante">
-                        <div class="tarjeta-horizontal">
-                            <div class="contenedor-tarjeta">
-                                <div class="img-horizontal">
-                                    <img class="img-propiedades" src="/assets/mosaico-1.jpeg" alt="">
-                                </div>
-                                <div class="info">
-                                    <div class="cont-titulo">
-                                        <div class="cont-titulo1">
-                                            <a href=""></a>
-                                            <p class="titulo-elemento">Canciones favoritas</p>
-                                        </div>
-                                    </div>
-                                    <div class="btn_accion">
-                                        <div class="btn-accion1">
-                                            <button class="btn-play">
-                                                <span class="material-icons md-30 pause"> pause
-                                                </span>
-                                            </button>
-                                        </div>
+    <div class="contenedor">
+        <div class="principal">
+            <section class="buenos-dias">
+                <div class="saludo">
+                    <h2 class="subtitulo">Buenos dias</h2>
+                </div>
+                <div class="relevante">
+                    <div class="tarjeta-horizontal">
+                        <div class="contenedor-tarjeta">
+                            <div class="img-horizontal">
+                                <img class="img-propiedades" src="/assets/mosaico-1.jpeg" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="cont-titulo">
+                                    <div class="cont-titulo1">
+                                        <a href=""></a>
+                                        <p class="titulo-elemento">Canciones favoritas</p>
                                     </div>
                                 </div>
-                                <div class="espacio">
+                                <div class="btn_accion">
+                                    <div class="btn-accion1">
+                                        <button class="btn-play">
+                                            <span class="material-icons md-30 pause"> pause
+                                            </span>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="tarjeta-horizontal">
-                            <div class="contenedor-tarjeta">
-                                <div class="img-horizontal">
-                                    <img class="img-propiedades" src="/assets/mosaico-1.jpeg" alt="">
-                                </div>
-                                <div class="info">
-                                    <div class="cont-titulo">
-                                        <div class="cont-titulo1">
-                                            <a href=""></a>
-                                            <p class="titulo-elemento">Canciones favoritas</p>
-                                        </div>
-                                    </div>
-                                    <div class="btn_accion">
-                                        <div class="btn-accion1">
-                                            <button class="btn-play">
-                                                <span class="material-icons md-30 pause"> pause
-                                                </span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="espacio">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tarjeta-horizontal">
-                            <div class="contenedor-tarjeta">
-                                <div class="img-horizontal">
-                                    <img class="img-propiedades" src="/assets/mosaico-1.jpeg" alt="">
-                                </div>
-                                <div class="info">
-                                    <div class="cont-titulo">
-                                        <div class="cont-titulo1">
-                                            <a href=""></a>
-                                            <p class="titulo-elemento">Canciones favoritas</p>
-                                        </div>
-                                    </div>
-                                    <div class="btn_accion">
-                                        <div class="btn-accion1">
-                                            <button class="btn-play">
-                                                <span class="material-icons md-30 pause"> pause
-                                                </span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="espacio">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tarjeta-horizontal">
-                            <div class="contenedor-tarjeta">
-                                <div class="img-horizontal">
-                                    <img class="img-propiedades" src="/assets/mosaico-1.jpeg" alt="">
-                                </div>
-                                <div class="info">
-                                    <div class="cont-titulo">
-                                        <div class="cont-titulo1">
-                                            <a href=""></a>
-                                            <p class="titulo-elemento">Canciones favoritas</p>
-                                        </div>
-                                    </div>
-                                    <div class="btn_accion">
-                                        <div class="btn-accion1">
-                                            <button class="btn-play">
-                                                <span class="material-icons md-30 pause"> pause
-                                                </span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="espacio">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tarjeta-horizontal">
-                            <div class="contenedor-tarjeta">
-                                <div class="img-horizontal">
-                                    <img class="img-propiedades" src="/assets/mosaico-1.jpeg" alt="">
-                                </div>
-                                <div class="info">
-                                    <div class="cont-titulo">
-                                        <div class="cont-titulo1">
-                                            <a href=""></a>
-                                            <p class="titulo-elemento">Canciones favoritas</p>
-                                        </div>
-                                    </div>
-                                    <div class="btn_accion">
-                                        <div class="btn-accion1">
-                                            <button class="btn-play">
-                                                <span class="material-icons md-30 pause"> pause
-                                                </span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="espacio">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tarjeta-horizontal">
-                            <div class="contenedor-tarjeta">
-                                <div class="img-horizontal">
-                                    <img class="img-propiedades" src="/assets/mosaico-1.jpeg" alt="">
-                                </div>
-                                <div class="info">
-                                    <div class="cont-titulo">
-                                        <div class="cont-titulo1">
-                                            <a href=""></a>
-                                            <p class="titulo-elemento">Canciones favoritas</p>
-                                        </div>
-                                    </div>
-                                    <div class="btn_accion">
-                                        <div class="btn-accion1">
-                                            <button class="btn-play">
-                                                <span class="material-icons md-30 pause"> pause
-                                                </span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="espacio">
-                                </div>
+                            <div class="espacio">
                             </div>
                         </div>
                     </div>
-                </section>
-            </div>
-        </section>
+                    <div class="tarjeta-horizontal">
+                        <div class="contenedor-tarjeta">
+                            <div class="img-horizontal">
+                                <img class="img-propiedades" src="/assets/Daily Mix 2.png" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="cont-titulo">
+                                    <div class="cont-titulo1">
+                                        <a href=""></a>
+                                        <p class="titulo-elemento">Mix diario 2</p>
+                                    </div>
+                                </div>
+                                <div class="btn_accion">
+                                    <div class="btn-accion1">
+                                        <button class="btn-play">
+                                            <span class="material-icons md-30 pause"> pause
+                                            </span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="espacio">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tarjeta-horizontal">
+                        <div class="contenedor-tarjeta">
+                            <div class="img-horizontal">
+                                <img class="img-propiedades" src="/assets/like.png" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="cont-titulo">
+                                    <div class="cont-titulo1">
+                                        <a href=""></a>
+                                        <p class="titulo-elemento">Canciones que te gustan</p>
+                                    </div>
+                                </div>
+                                <div class="btn_accion">
+                                    <div class="btn-accion1">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="espacio">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tarjeta-horizontal">
+                        <div class="contenedor-tarjeta">
+                            <div class="img-horizontal">
+                                <img class="img-propiedades" src="/assets/Daily Mix 1.png" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="cont-titulo">
+                                    <div class="cont-titulo1">
+                                        <a href=""></a>
+                                        <p class="titulo-elemento">Mix diario 1</p>
+                                    </div>
+                                </div>
+                                <div class="btn_accion">
+                                    <div class="btn-accion1">
+                                        <button class="btn-play">
+                                            <span class="material-icons md-30 pause"> pause
+                                            </span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="espacio">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tarjeta-horizontal">
+                        <div class="contenedor-tarjeta">
+                            <div class="img-horizontal">
+                                <img class="img-propiedades" src="/assets/Daily Mix 3.png" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="cont-titulo">
+                                    <div class="cont-titulo1">
+                                        <a href=""></a>
+                                        <p class="titulo-elemento">Mix diario 3</p>
+                                    </div>
+                                </div>
+                                <div class="btn_accion">
+                                    <div class="btn-accion1">
+                                        <button class="btn-play">
+                                            <span class="material-icons md-30 pause"> pause
+                                            </span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="espacio">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tarjeta-horizontal">
+                        <div class="contenedor-tarjeta">
+                            <div class="img-horizontal">
+                                <img class="img-propiedades" src="/assets/Daily Mix 4.png" alt="">
+                            </div>
+                            <div class="info">
+                                <div class="cont-titulo">
+                                    <div class="cont-titulo1">
+                                        <a href=""></a>
+                                        <p class="titulo-elemento">Mix diario 4</p>
+                                    </div>
+                                </div>
+                                <div class="btn_accion">
+                                    <div class="btn-accion1">
+                                        <button class="btn-play">
+                                            <span class="material-icons md-30 pause"> pause
+                                            </span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="espacio">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="enfoque">
+
+            </section>
+        </div>
     </div>
+
 </body>
 
 </html>
