--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                                 <span class="material-icons md-16">person_outline</span>
                             </div>
                             <div class="spn">Usuario</div>
-
                             <span class="material-icons md-15 triangulo">play_arrow</span>
                         </button>
                     </header>
@@ -210,7 +209,7 @@
             </div>
             <!--Area Principal -->
             <div class="principal" id="principal">
-                <iframe src="/home.html" height="100%"></iframe>
+                <iframe src="/home.html" height="100%" frameborder="0"></iframe>
             </div>
         </div>
     </div>
