seccion de enfoque

--- a/home.html
+++ b/home.html
@@ -167,8 +167,147 @@
                 </div>
             </section>
             <section class="enfoque">
-
+                <div>
+                    <div class="titulo-enfoque">
+                        <div class="tit-derecha">
+                            <h2 class="subtitulo2">Enfoque</h2>
+                        </div>
+                        <a class="tit-izquierda" chref="">
+                            <span class="mostrar">Mostrar todos</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="contenido-enfoque">
+                    <div class="elemento-enfoque">
+                        <div class="contenido">
+                            <div class="imagen-enfoque">
+                                <div class="img-enf">
+                                    <img class="imga" src="/assets/enfoque/1.png" alt="">
+                                </div>
+                            </div>
+                            <div class="descripcion-enfoque">
+                                <a class="tit-elemento-enfoque" href="">
+                                    <div class="tit-lista">
+                                        Enfoque
+                                    </div>
+                                </a>
+                                <div class="subtit-elemento-enfoque">
+                                    Relax and indulge with beautiful piano pieces.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="elemento-enfoque">
+                        <div class="contenido">
+                            <div class="imagen-enfoque">
+                                <div class="img-enf">
+                                    <img class="imga" src="/assets/enfoque/2.png" alt="">
+                                </div>
+                            </div>
+                            <div class="descripcion-enfoque">
+                                <a class="tit-elemento-enfoque" href="">
+                                    <div class="tit-lista">
+                                        Deep Focus
+                                    </div>
+                                </a>
+                                <div class="subtit-elemento-enfoque">
+                                    Keep calm and focus with ambient and post-rock...
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="elemento-enfoque">
+                        <div class="contenido">
+                            <div class="imagen-enfoque">
+                                <div class="img-enf">
+                                    <img class="imga" src="/assets/enfoque/3.png" alt="">
+                                </div>
+                            </div>
+                            <div class="descripcion-enfoque">
+                                <a class="tit-elemento-enfoque" href="">
+                                    <div class="tit-lista">
+                                        Instrumental study
+                                    </div>
+                                </a>
+                                <div class="subtit-elemento-enfoque">
+                                    Focus with soft study music in the background.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="elemento-enfoque">
+                        <div class="contenido">
+                            <div class="imagen-enfoque">
+                                <div class="img-enf">
+                                    <img class="imga" src="/assets/enfoque/4.png" alt="">
+                                </div>
+                            </div>
+                            <div class="descripcion-enfoque">
+                                <a class="tit-elemento-enfoque" href="">
+                                    <div class="tit-lista">
+                                        Jazz Vibes
+                                    </div>
+                                </a>
+                                <div class="subtit-elemento-enfoque">
+                                    The original chill instrumental beats playlist.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="elemento-enfoque">
+                        <div class="contenido">
+                            <div class="imagen-enfoque">
+                                <div class="img-enf">
+                                    <img class="imga" src="/assets/enfoque/5.png" alt="">
+                                </div>
+                            </div>
+                            <div class="descripcion-enfoque">
+                                <a class="tit-elemento-enfoque" href="">
+                                    <div class="tit-lista">
+                                        Focus Flow
+                                    </div>
+                                </a>
+                                <div class="subtit-elemento-enfoque">
+                                    Uptempo instrumental hip hop beats.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="elemento-enfoque">
+                        <div class="contenido">
+                            <div class="imagen-enfoque">
+                                <div class="img-enf">
+                                    <img class="imga" src="/assets/enfoque/6.png" alt="">
+                                </div>
+                            </div>
+                            <div class="descripcion-enfoque">
+                                <a class="tit-elemento-enfoque" href="">
+                                    <div class="tit-lista">
+                                        Worckday Lounge
+                                    </div>
+                                </a>
+                                <div class="subtit-elemento-enfoque">
+                                    Lounge and chill out music for your workday.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+            
         </div>
     </div>
 
